--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.16",
     "gray-matter": "^4.0.3",
