--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prism-react-renderer": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.1"
   },
   "devDependencies": {
